# SimpleHttpToWebsocketGateway

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  系统结构图.vsdx
release/GateWay/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  config.default.json  config.json
release/GateWay/HttpToWebSocketGateway_autogen/: deps  mocs_compilation.cpp
release/GateWay/HttpToWebSocketGateway_autogen/EWIEGA46WW/: moc_config.cpp.d  moc_simplehttpserver.cpp.d  moc_websocketclient.cpp.d
release/echo_Websocket_server/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
src/: CMakeLists.txt  config.cpp  config.default.json  config.h  config.json  main.cpp  simplehttpserver.cpp  simplehttpserver.h  websocketclient.cpp  websocketclient.h
testvi/: TestSimpleHttpClient.vi  client.http
